5086 SF